--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 @import 'tailwindcss';
 
 @theme {
@@ -41,3 +42,4 @@
     border-color: var(--color-gray-200, currentcolor);
   }
 }
+/* stylelint-enable */
